--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,53 @@ jobs:
       if: github.ref == 'refs/heads/master'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: css
+        FOLDER: public/css
+        BASE_BRANCH: master
+        CLEAN: true
+  css_commit:
+    name: get css commit
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    outputs:
+      sha: ${{ steps.get_commit.outputs.sha }}
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        ref: 'css'
+        fetch-depth: 1
+    - id: get_commit
+      run: echo "::set-output name=sha::$(git rev-parse HEAD)"
+  build_deployment:
+    name: build deployment
+    runs-on: ubuntu-latest
+    needs: css_commit
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 14
+    - run: npm install -g yarn
+    - name: Get yarn cache
+      id: yarn-cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v2
+      with:
+        path: ${{ steps.yarn-cache.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+    - run: yarn install
+    - run: yarn build
+      env:
+        CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      if: github.ref == 'refs/heads/master'
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: public
         BASE_BRANCH: master
