--- a/_config.next.yml
+++ b/_config.next.yml
@@ -3,6 +3,7 @@ custom_file_path:
   header: source/_data/header.njk
   style: source/_data/styles.styl
   sidebar: source/_data/sidebar.njk
+  footer: source/_data/footer.njk
 scheme: Muse
 #darkmode: true
 avatar: 
