--- a/_config.next.yml
+++ b/_config.next.yml
@@ -1,5 +1,6 @@
 minify: true
 custom_file_path:
+  head: source/_data/head.njk
   header: source/_data/header.njk
   style: source/_data/styles.styl
   sidebar: source/_data/sidebar.njk
