--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,8 +27,15 @@ jobs:
           ${{ runner.os }}-yarn-
     - run: yarn install
     - run: yarn build
+      if: github.ref != 'refs/heads/master'
+    - run: yarn build
+      if: github.ref == 'refs/heads/master'
+      env:
+        CSS_COMMIT: css
+        DO_NOT_REMOVE_CSS: TRUE
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      id: csspush
+      uses: JamesIves/github-pages-deploy-action@releases/v4
       if: github.ref == 'refs/heads/master'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,46 +43,11 @@ jobs:
         FOLDER: public/css
         BASE_BRANCH: master
         CLEAN: true
-  css_commit:
-    name: get css commit
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    outputs:
-      sha: ${{ steps.get_commit.outputs.sha }}
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: 'css'
-        fetch-depth: 1
-    - id: get_commit
-      run: echo "::set-output name=sha::$(git rev-parse HEAD)"
-  build_deployment:
-    name: build deployment
-    runs-on: ubuntu-latest
-    needs: css_commit
-    if: github.ref == 'refs/heads/master'
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 14
-    - run: npm install -g yarn
-    - name: Get yarn cache
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v2
-      with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-    - run: yarn install
-    - run: yarn build
-      env:
-        CSS_COMMIT: ${{needs.css_commit.outputs.sha}}
+    - name: Purge jsdelivr cache
+      if: github.ref == 'refs/heads/master' && ${{ steps.csspush.outputs.deployment-status }} == 'success'
+      run: curl https://purge.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@css/main.css
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@releases/v4
       if: github.ref == 'refs/heads/master'
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -92,21 +64,3 @@ jobs:
         local_path: './public/*'
         remote_path: '/opt/wordpress'
         args: '-o ConnectTimeout=10'
-  purge:
-    name: purge cloudflare caches
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-    needs: [build_deployment]
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: 'gh-pages'
-        fetch-depth: 2
-    - name: cachepurger
-      uses: njzjz/cachepurger@index
-      with:
-        url-prefix: 'https://computchem.cn/'
-        zone-id: ${{ secrets.CLOUDFLAREZONEID }}
-        api-token: ${{ secrets.CLOUDFLAREAPITOKEN }}
-        from-commit: 'HEAD~1'
-        to-commit: 'HEAD'
