fix: extract inline scripts to external files

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "hexo": "5.4.0",
+    "hexo-extract-inline-scripts": "0.0.2",
     "hexo-generator-archive": "1.0.0",
     "hexo-generator-category": "1.0.0",
     "hexo-generator-index": "2.0.0",
