--- a/_config.next.yml
+++ b/_config.next.yml
@@ -1,9 +1,8 @@
 minify: true
 custom_file_path:
-  head: source/_data/head.njk
   header: source/_data/header.njk
   style: source/_data/styles.styl
-  sidebar: source/_data/sidebar.njk
+  sidebar: source/_data/footer.njk
   footer: source/_data/footer.njk
 scheme: Muse
 #darkmode: true
