--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "purge_qcloud": "pip install -r purge_qcloud/requirements.txt && python purge_qcloud/purge.py"
   },
   "hexo": {
     "version": "5.2.0"
@@ -25,7 +26,8 @@
     "hexo-renderer-stylus": "2.0.1",
     "hexo-server": "2.0.0",
     "hexo-tag-bootstrap": "https://github.com/dotJobs/hexo-tag-bootstrap#06cc099d9a799fdc878a9b5d648f6aeda961b402",
-    "hexo-theme-next": "8.2.2"
+    "hexo-theme-next": "8.2.2",
+    "jsdelivr_url": "0.0.1"
   },
   "resolutions": {
     "gifsicle": "4.0.1"
