--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "purge_qcloud": "pip install -r purge_qcloud/requirements.txt && python purge_qcloud/purge.py"
   },
   "hexo": {
-    "version": "5.2.0"
+    "version": "5.4.0"
   },
   "dependencies": {
     "hexo": "5.4.0",
@@ -26,6 +26,7 @@
     "hexo-renderer-stylus": "2.0.1",
     "hexo-server": "2.0.0",
     "hexo-tag-bootstrap": "https://github.com/dotJobs/hexo-tag-bootstrap#06cc099d9a799fdc878a9b5d648f6aeda961b402",
+    "hexo-tag-publications": "0.1.12",
     "hexo-theme-next": "8.2.2",
     "jsdelivr_url": "0.0.1"
   },
