chore: use native image resizing

--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,7 @@ css_minifier:
   level: 2
 cdn:
   use_webp: true
+  native: true
   exclude_domains:
     - https://images.weserv.nl/
     - https://cdn.jsdelivr.net/
