replace jsdelivr with cdnjs and unpkg
see https://github.com/jsdelivr/jsdelivr/issues/18397

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -27,8 +27,8 @@ mediumzoom: true
 lazyload: true
 pangu: false
 vendors:
-  internal: jsdelivr
-  plugins: jsdelivr
+  internal: cdnjs
+  plugins: cdnjs
 font:
   enable: true
   global:
