--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "preview-cfpages preview",
-    "cfpages:build": "npm build build",
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server",
-    "purge_qcloud": "pip install -r purge_qcloud/requirements.txt && python purge_qcloud/purge.py"
+    "server": "hexo server"
   },
   "hexo": {
     "version": "5.4.0"
